syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}
